feat: add log query filters
